<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/arrowIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCreatePassword"
        android:layout_width="370dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:text="@string/Hello_reg_to_star"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowIcon" />

    <EditText
        android:id="@+id/emailTextViewInsert"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/grey"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordTextViewInsert"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/grey"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextViewInsert" />

    <EditText
        android:id="@+id/passConfirmTextViewInsert"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/grey"
        android:drawablePadding="8dp"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextViewInsert" />

    <Button
        android:id="@+id/regButtonLayReg"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/register"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passConfirmTextViewInsert" />

    <TextView
        android:id="@+id/textViewAlreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/already_registered"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regButtonLayReg"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/textViewLoginFromReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textColor="#03A9F4"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/textViewAlreadyRegistered"
        app:layout_constraintTop_toBottomOf="@+id/regButtonLayReg"
        app:layout_constraintVertical_bias="0.17" />


</androidx.constraintlayout.widget.ConstraintLayout>