...
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/login"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/loginButtonWelcPage2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginButtonWelcPage2"
        app:layout_constraintTop_toBottomOf="@+id/name_app" />

    <Button
        android:id="@+id/loginButtonWelcPage2"
...
