...
        android:layout_height="match_parent"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/notifications"/>


    <item
        android:id="@+id/profileInfoFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>

</menu>
